CMAKE_MINIMUM_REQUIRED(VERSION 3.24)

PROJECT(stay_editor VERSION 0.1)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

FILE(GLOB_RECURSE
    ${PROJECT_NAME}_SOURCE_CODE
    CONFIGURE_DEPENDS
    "source/*" 
)

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCE_CODE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE stay)